samples/_failures_safe/1761332906_ef5d9c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb0dcbf4.c: In function ‘main’:
./samples/SAFE/__tmp_bb0dcbf4.c:174:5: error: expected declaration or statement at end of input
  174 |     }
      |     ^
